# pdf2md

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  1.yaml  Makefile  README.md  pdf_to_markdown.py  pyproject.toml  requirements.txt
